# pyx12

./: .coveragerc  .cvsignore  .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  2to3.changelog  2to3.diff  997_if.py  CHANGELOG.txt  CLAUDE.md  INSTALL.txt  LICENSE.txt  MANIFEST.in  README.md  README.txt  RELEASE  TODO  __init__.py  codes.py  codes.xsl  err_997.py  error_997.py  error_debug.py  error_handler.py  error_html.py  error_visitor.py  errors.py  make_plist.py  make_views.sh  map_if.py  map_index.py  map_seg.xsl  map_sum.xsl  map_walker.py  params.py  plist.py  pyproject.toml  pyx12.py  pyx12.pyproj  (+20 more)
.claude/commands/: publish.md  test.md
.github/: release.yml
.github/workflows/: main.yml  publish-to-test-pypi.yml  release.yml
doc/: override.xml
docs/: api.rst  cli.rst  concepts.rst  conf.py  errors.rst  index.rst  quickstart.rst  readme.md
map/: 270.4010.X092.A1.xml  270.4010.X092.xml  271.4010.X092.A1.xml  271.4010.X092.xml  276.4010.X093.A1.xml  276.4010.X093.xml  277.4010.X093.A1.xml  277.4010.X093.xml  277.4020.X104.xml  277U.4010.X070.xml  278.4010.X094.27.A1.xml  278.4010.X094.27.xml  278.4010.X094.A1.xml  278.4010.X094.xml  820.4010.X061.A1.xml  820.4010.X061.xml  820.5010.X218.loops.xml  820.5010.X218.v2.xml  820.5010.X218.xml  830.4010.PS.xml  834.4010.X095.A1.xml  834.5010.X220.A1.loops.xml  834.5010.X220.A1.v2.xml  834.5010.X220.A1.xml  834.5010.X220.xml  835.4010.X091.A1.xml  835.4010.X091.xml  835.5010.X221.A1.loops.xml  835.5010.X221.A1.v2.xml  835.5010.X221.A1.xml  837.4010.X096.A1.xml  837.4010.X096.xml  837.4010.X097.A1.xml  837.4010.X097.xml  837.4010.X098.A1.xml  837.4010.X098.xml  837.5010.X222.A1.xml  837.5010.X222.xml  837Q1.P.5010.X222.A1.loops.xml  837Q3.I.5010.X223.A1.loops.xml  (+25 more)
map/process/: Makefile  loop.xsl  loop_id.xsl  loops only.xsl  rmtypes.xsl
pyx12/: .cvsignore  Makefile  README.txt  SConstruct  __init__.py  c_test1.cxx  codes.py  dataele.py  datavalidation.py  decorators.py  errh_xml.py  error_997.py  error_999.py  error_debug.py  error_handler.py  error_html.py  error_item.py  error_json.py  error_router.py  error_visitor.py  errors.cxx  errors.hxx  errors.py  jsonwriter.py  make_plist.py  map_if.py  map_index.py  map_override.py  map_walker.py  nodeCounter.py  params.py  path.py  rawx12file.py  segment.cxx  segment.hxx  segment.py  setup.py  syntax.py  test1.cxx  test_csegment.cxx  (+21 more)
pyx12/examples/: deident834.py  example834_5010.txt  generate_spec.py  multiple_st_loops.txt  node_iterator.py  st_context_iterator.py  st_iterator.py
pyx12/map/: 270.4010.X092.A1.xml  270.5010.X279.A1.v2.xml  270.5010.X279.A1.xml  271.4010.X092.A1.xml  271.5010.X279.A1.v2.xml  271.5010.X279.A1.xml  276.4010.X093.A1.xml  277.4010.X093.A1.xml  277.5010.X212.xml  277.5010.X214.xml  277U.4010.X070.xml  278.4010.X094.27.A1.xml  278.4010.X094.A1.xml  820.4010.X061.A1.xml  820.5010.X218.loops.xml  820.5010.X218.v2.xml  820.5010.X218.xml  830.4010.PS.xml  834.4010.X095.A1.xml  834.5010.X220.A1.v2.xml  834.5010.X220.A1.xml  835.4010.X091.A1.xml  835.5010.X221.A1.loops.xml  835.5010.X221.A1.v2.xml  835.5010.X221.A1.xml  837.4010.X096.A1.xml  837.4010.X097.A1.xml  837.4010.X098.A1.xml  837.5010.X222.A1.xml  837D.5010.X224.A2.xml  837Q3.I.5010.X223.A1.loops.xml  837Q3.I.5010.X223.A1.v2.xml  837Q3.I.5010.X223.A1.xml  841.4010.XXXC.xml  997.4010.xml  999.5010.xml  999.5010X231.A1.xml  Makefile  README  TODO  (+16 more)
pyx12/map_if/: __init__.py  _base.py  _composite.py  _element.py  _loader.py  _loop.py  _root.py  _segment.py
pyx12/pyx12/: SConstruct  dataele.py  error_handler.py  errors.cxx  map_override.py  segment.py  x12xml.py
pyx12/scripts/: __init__.py  x12html.py  x12info.py  x12norm.py  x12valid.py  x12xml.py  xmlx12.py
pyx12/test/: .gitignore  pyx12test.conf.xml  test_codes.py  test_dataele.py  test_decorators.py  test_error_item.py  test_jsonwriter.py  test_map_if.py  test_map_if_load.py  test_map_index.py  test_map_loop_paths.py  test_map_unique.py  test_map_walker.py  test_nodeCounter.py  test_params.py  test_path.py  test_rawx12file.py  test_segment.py  test_syntax.py  test_validation.py  test_x12context.py  test_x12file.py  test_x12metadata.py  test_x12n_document.py  test_x12xml_idtag.py  test_xmlwriter.py  test_xmlx12_simple.py  x12testdata.py
pyx12/tests/: 834_deident_family.txt  834_deident_new_enroll.txt  834_deident_term.txt  834_ls_le_ls.txt  834_ls_le_ls_5010.999.txt  834_lui_id_5010.999.txt  835_mult_loops.txt  SConstruct  __init__.py  codes.py  dataele.py  dups.py  map_if.py  map_index.py  map_path.py  map_unique.py  map_walker.py  nodeCounter.py  params.py  path.py  rawx12file.py  segment.py  support.py  syntax.py  test_config.py  utils.py  validation.py  x12context.py  x12file.py  x12filereader.py  x12n_document.py  x12testdata.py  x12xml_idtag.py  xmlwriter.py  xmlx12_simple.py
test/: .cvsignore  SConstruct  dups.py  helper.py  pyx12.conf.xml  pyx12test.conf.xml  test.py  test_codes.py  test_csegment.cxx  test_dataele.py  test_datavalidation.py  test_functional.py  test_map_if.py  test_map_index.py  test_map_path.py  test_map_unique.py  test_map_walker.py  test_params.py  test_path.py  test_rawx12file.py  test_segment.py  test_syntax.py  test_utils.py  test_validation.py  test_x12context.py  test_x12file.py  test_x12n_document.py  test_x12xml_idtag.py  test_xmlwriter.py  test_xmlx12_simple.py
test/files/: .cvsignore  278map.txt  820.loops.txt  820.loops.xml.sample  834_lui_id.txt  835_simple.997.base  835_simple.txt  835_test.xsl  bad_2010AA_bug.997.base  bad_2010AA_bug.txt  bad_elements.997.base  bad_elements.txt  bad_header_looping.997.base  blank1.997.base  blank1.txt  ele.997.base  ele.txt  explicit_missing.997.base  fail_no_IEA.997.base  fail_no_IEA.txt  gs_id.txt  loop_counting.997.base  loop_counting2.997.base  loop_counting2.xsl  mult_isa.997.base  mult_isa.txt  mult_trn.997.base  (+18 more)
tools/: check_maps.py  test_install.py
trunk/: INSTALL.txt  TODO  setup.cfg
unit/: unit.py  unit_map_if.py  unit_utils.py
view/: Makefile  codes.xsl  loop.css  loop.xsl  map_seg.xsl  map_sum.xsl  plain.css  seg.css  sum.css
(+73 files in other folders)
